# algorithmic-efficiency

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  GETTING_STARTED.md  README.md  pyproject.toml  submission_runner.py
.github/workflows/: linting.yml
algoperf/: checkpoint_utils.py  data_utils.py  halton.py  logger_utils.py  param_utils.py  pytorch_utils.py  random_utils.py  spec.py
algoperf/workloads/: workloads.py
algoperf/workloads/cifar/cifar_jax/: workload.py
algoperf/workloads/cifar/cifar_pytorch/: workload.py
algoperf/workloads/criteo1tb/: workload.py
algoperf/workloads/criteo1tb/criteo1tb_jax/: models.py  workload.py
algoperf/workloads/criteo1tb/criteo1tb_pytorch/: models.py  workload.py
algoperf/workloads/fastmri/: workload.py
algoperf/workloads/fastmri/fastmri_jax/: models.py  workload.py
algoperf/workloads/fastmri/fastmri_pytorch/: models.py  workload.py
algoperf/workloads/imagenet_resnet/: workload.py
algoperf/workloads/imagenet_resnet/imagenet_jax/: randaugment.py  workload.py
algoperf/workloads/imagenet_resnet/imagenet_pytorch/: workload.py
algoperf/workloads/imagenet_vit/: workload.py
algoperf/workloads/imagenet_vit/imagenet_jax/: models.py  workload.py
algoperf/workloads/imagenet_vit/imagenet_pytorch/: models.py  workload.py
algoperf/workloads/librispeech_conformer/: workload.py
algoperf/workloads/librispeech_conformer/librispeech_jax/: models.py  workload.py
algoperf/workloads/librispeech_conformer/librispeech_pytorch/: models.py  workload.py
algoperf/workloads/librispeech_deepspeech/librispeech_jax/: models.py  workload.py
algoperf/workloads/librispeech_deepspeech/librispeech_pytorch/: models.py  workload.py
algoperf/workloads/mnist/mnist_jax/: workload.py
algoperf/workloads/ogbg/: input_pipeline.py  workload.py
algoperf/workloads/ogbg/ogbg_jax/: models.py  workload.py
algoperf/workloads/ogbg/ogbg_pytorch/: models.py  workload.py
algoperf/workloads/wmt/: bleu.py  workload.py
algoperf/workloads/wmt/wmt_jax/: decode.py  models.py  workload.py
algoperf/workloads/wmt/wmt_pytorch/: decode.py  models.py  workload.py
datasets/: README.md  dataset_setup.py  librispeech_preprocess.py  librispeech_tokenizer.py
docker/: Dockerfile  Singularity.def
docs/: CALL_FOR_SUBMISSIONS.md  CONTRIBUTING.md  DOCUMENTATION.md  GETTING_STARTED.md
prize_qualification_baselines/: README.md
prize_qualification_baselines/external_tuning/: jax_nadamw_full_budget.py  jax_nadamw_target_setting.py
prize_qualification_baselines/self_tuning/: jax_nadamw_full_budget.py  jax_nadamw_target_setting.py  pytorch_nadamw_full_budget.py  pytorch_nadamw_target_setting.py
reference_algorithms/development_algorithms/cifar/cifar_jax/: submission.py
reference_algorithms/development_algorithms/mnist/mnist_jax/: submission.py
reference_algorithms/paper_baselines/adafactor/jax/: sharded_adafactor.py  submission.py
reference_algorithms/paper_baselines/adamw/jax/: submission.py
reference_algorithms/paper_baselines/lamb/jax/: submission.py
reference_algorithms/paper_baselines/momentum/jax/: submission.py
reference_algorithms/paper_baselines/nesterov/jax/: submission.py
reference_algorithms/paper_baselines/sam/jax/: submission.py
reference_algorithms/paper_baselines/shampoo/jax/: distributed_shampoo.py  submission.py
reference_algorithms/target_setting_algorithms/: jax_adamw.py  jax_momentum.py  jax_nadamw.py  jax_nesterov.py  jax_submission_base.py
scoring/: compute_speedups.py  generate_held_out_workloads.py  performance_profile.py  plotting_compute_budgets.ipynb  plotting_correlations.ipynb  plotting_identify_bugged_runs.ipynb  plotting_loss.ipynb  plotting_max_tau.ipynb  plotting_performance_profiles.ipynb  plotting_runtimes.ipynb  plotting_speedups.ipynb  plotting_total_runtime.ipynb  plotting_utils.py  plotting_workload_results.ipynb  run_workloads.py  score_submissions.py  scoring_utils.py
submissions/template/: submission.py
tests/: reference_algorithm_tests.py  test_param_shapes.py  test_traindiffs.py  test_version.py  version_test.py
tests/modeldiffs/: diff.py  vanilla_sgd_jax.py
tests/modeldiffs/criteo1tb/: compare.py
tests/modeldiffs/criteo1tb_embed_init/: compare.py
tests/modeldiffs/criteo1tb_layernorm/: compare.py
tests/modeldiffs/criteo1tb_resnet/: compare.py
tests/modeldiffs/fastmri/: compare.py
tests/modeldiffs/fastmri_layernorm/: compare.py
tests/modeldiffs/fastmri_model_size/: compare.py
tests/modeldiffs/fastmri_tanh/: compare.py
tests/modeldiffs/imagenet_resnet/: compare.py  gelu_compare.py  silu_compare.py
tests/modeldiffs/imagenet_vit/: compare.py
tests/modeldiffs/imagenet_vit_glu/: compare.py
tests/modeldiffs/imagenet_vit_map/: compare.py
tests/modeldiffs/imagenet_vit_postln/: compare.py
tests/modeldiffs/librispeech_conformer/: compare.py
tests/modeldiffs/librispeech_conformer_attention_temperature/: compare.py
tests/modeldiffs/librispeech_conformer_gelu/: compare.py
tests/modeldiffs/librispeech_conformer_layernorm/: compare.py
tests/modeldiffs/librispeech_deepspeech/: compare.py
tests/modeldiffs/librispeech_deepspeech_noresnet/: compare.py
tests/modeldiffs/librispeech_deepspeech_normaug/: compare.py
tests/modeldiffs/librispeech_deepspeech_tanh/: compare.py
tests/modeldiffs/ogbg/: compare.py
tests/modeldiffs/ogbg_gelu/: compare.py
tests/modeldiffs/ogbg_model_size/: compare.py
tests/modeldiffs/ogbg_silu/: compare.py
tests/modeldiffs/wmt/: compare.py
tests/modeldiffs/wmt_attention_temp/: compare.py
tests/modeldiffs/wmt_glu_tanh/: compare.py
tests/modeldiffs/wmt_post_ln/: compare.py
tests/workloads/imagenet_resnet/imagenet_jax/: workload_test.py
